# nesy25

./: .copilotignore  .gitignore  README.md  licenses.txt  pyproject.toml
explainability/: env.yml  requirements.txt  theory_xclingo.lp
explainability/encoded_questions/: 03127831.lp  03585329.lp  08607019.lp  102797.lp  15958332.lp  15975453.lp  16329706.lp  16534280.lp  16995720.lp  17172217.lp
explainability/gsvqa/: 001555.lp  02468.lp  theory.lp  theory_xclingo.lp
explainability/real_question/: question_encoding.lp  scene_encoding.lp
logs/: ablationlog.csv  arq1_study.csv  arq2_codelike.csv  arq2_study.csv  arq3_study.csv  nr_example_study.csv  prompt_comparison_study.csv  rq_study.csv  test_eval.csv  val_eval.csv
src/: constants.py  eval_full_pipeline.py
src/asp_encoding/: __init__.py  asp_utils.py  perfect_information_encoding.py  question_encoding.py  run_clingo.py  scene_encoding.py
src/evaluation/: __init__.py  csvlogger.py
src/gs_vqa/: gs_vqa_utils.py  singularize.py
src/gs_vqa/model/: align_model.py  clip_model.py
src/gs_vqa/object_detection/: owl_vit_object_detector.py
src/gs_vqa/pipeline/: concept_extraction.py
src/llms/: .env  __init__.py  genericLLM.py  localmodels.py  openaiLLM.py
src/prompt_tools/: __init__.py  prompt_creator.py  prompt_templates.py
src/semantic_interpreter/: __init__.py  atomic_operations.py  auxil_operations.py  gqa_object.py  known_exceptions.py  run_func_program.py
src/utils/: __init__.py  blind_concept_extractor.py  prepare_data.py  transform_representation.py  utils.py
